--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-VITE_APPWRITE_PROJECT_ID = "6848d9890025585417a2"
-VITE_APPWRITE_ENDPOINT = "https://fra.cloud.appwrite.io/v1"
+# APPWRITE CONFIGURATION
+VITE_APPWRITE_PROJECT_ID = 6848d9890025585417a2
+VITE_APPWRITE_ENDPOINT = https://fra.cloud.appwrite.io/v1
+
+# 
+VITE_BASE_URL = http://localhost:5173
