chore: verification page - resend email - waiting verification page - taost notifs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 VITE_APPWRITE_PROJECT_ID = "project_id_here"
 VITE_APPWRITE_ENDPOINT = "https://<REGION>.cloud.appwrite.io/v1"
+VITE_APPWRITE_sECRET = "your_appwrite_secret_here"
 
 VITE_BASE_URL = http://localhost:5173
