chore: db setup

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# APPWRITE CONFIGURATION
 VITE_APPWRITE_PROJECT_ID = "project_id_here"
 VITE_APPWRITE_ENDPOINT = "https://<REGION>.cloud.appwrite.io/v1"
 VITE_APPWRITE_sECRET = "your_appwrite_secret_here"
+
+# DATABASE CONFIG
+FESTIVE_DATABASE_ID = "your_appwrite_db_ID";
+EVENT_COLLECTION_ID = "your_envent_appwrite_db_ID";
 
 VITE_BASE_URL = http://localhost:5173
